Removed vulnerable library Model mapper